[package]

name = "osauth"
description = "Asynchronous OpenStack session and authentication"
version = "0.3.4"  # remember to update html_root_url
authors = ["Dmitry Tantsur <dtantsur@protonmail.com>"]
homepage = "https://github.com/dtantsur/rust-osauth"
repository = "https://github.com/dtantsur/rust-osauth"
documentation = "https://docs.rs/osauth"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2018"

[features]

default = ["native-tls", "stream", "sync"]
default-rustls = ["rustls", "stream", "sync"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
stream = ["async-stream", "futures"]
sync = ["bytes", "futures", "tokio/rt"]

[dependencies]

async-stream = { version = "^0.3", optional = true }
async-trait = "^0.1"
bytes = { version = "^1.0", optional = true }
chrono = { version = "^0.4", features = ["serde"] }
dirs = "^3.0.1"
futures = { version = "^0.3", optional = true }
log = "^0.4"
pin-project = "^1.0"
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "json", "stream"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
tokio = { version = "^1.0", features = ["net", "sync"] }
url = { version = "^2.2", features = ["serde"] }

[dev-dependencies]

env_logger = "^0.8"
maplit = "^1.0"
tempfile = "^3.1"
tokio = { version = "^1.0", features = ["macros", "net", "sync", "rt-multi-thread"] }

[lib]

name = "osauth"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "dtantsur/rust-osauth" }

[[example]]
name = "list-servers-paginated"
required-features = ["stream"]
