[package]

name = "osauth"
description = "Asynchronous OpenStack session and authentication"
version = "0.5.0"  # remember to update html_root_url
authors = ["Dmitry Tantsur <dtantsur@protonmail.com>"]
homepage = "https://github.com/dtantsur/rust-osauth"
repository = "https://github.com/dtantsur/rust-osauth"
documentation = "https://docs.rs/osauth"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2021"

[features]

default = ["native-tls", "stream"]
default-rustls = ["rustls", "stream"]
native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
stream = ["async-stream", "futures"]

[dependencies]

async-stream = { version = "^0.3", optional = true }
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
dirs = "^4.0.0"
futures = { version = "^0.3", optional = true }
http = "^1.0"
lazy_static = "^1.4"
log = "^0.4"
osauth-derive = { version = "^0.1.2" }
percent-encoding = "^2.2"
pin-project = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.9"
static_assertions = "^1.1"
take_mut = "^0.2"
tokio = { version = "^1.0", features = ["net", "sync"] }
url = { version = "^2.2", features = ["serde"] }

[dependencies.reqwest]

version = "^0.12"
default-features = false
features = ["gzip", "http2", "json", "stream"]

[dev-dependencies]

env_logger = "^0.9"
maplit = "^1.0"
serde_urlencoded = "0.7"
tempfile = "^3.1"
tokio = { version = "^1.0", features = ["macros", "net", "sync", "rt-multi-thread"] }

[lib]

name = "osauth"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "dtantsur/rust-osauth" }

[[example]]
name = "list-servers-paginated"
required-features = ["stream"]
