[package]
name = "osauth-derive"
description = "Macro for asynchronous OpenStack session and authentication"
version = "0.1.2"
authors = ["Dmitry Tantsur <dtantsur@protonmail.com>"]
homepage = "https://github.com/dtantsur/rust-osauth"
repository = "https://github.com/dtantsur/rust-osauth"
documentation = "https://docs.rs/osauth-derive"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[dev-dependencies]
osauth = "0.4"
serde = "1.0"
serde_json = "1.0"
